classe 'Event' modificada